--- a/src/app/components/home_web/favorite-food/favorite-food.component.html
+++ b/src/app/components/home_web/favorite-food/favorite-food.component.html
@@ -1,22 +1,22 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <div>
+            <div class="p-0 mb-0 mt-0">
                 <div class="row">
                     <div class="col text-center">
                         <h5 class="text-center titulo_favorite">Platos Favoritos</h5>
-                        <img src="../../../../assets/img/separador.png" alt="" width="1000px" height="60px" class="">
+                        <img src="../../../../assets/img/separador.png" alt="" width="800px" height="30px" class="">
                     </div>
                 </div>
             </div>
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide " data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="container">
                             <div class="row">
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
@@ -24,7 +24,10 @@
                                                 </a>
 
                                                 <a class="text-muted text-center primero font-text card-link" href="#">
-                                                    <p><small> Nombre del plato</small></p>
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -33,15 +36,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -50,15 +56,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -67,15 +76,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card  mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -84,15 +96,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0  border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -101,39 +116,47 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card  mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
+
                     <div class="carousel-item">
 
 
                         <div class="container">
                             <div class="row">
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -142,15 +165,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -159,15 +185,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -176,15 +205,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card  mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -193,15 +225,18 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card mb-0 mt-0  border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
@@ -210,24 +245,27 @@
                                 </div>
 
                                 <div class="col-2">
-                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                    <div class="card  mb-0 mt-0 border-light text-center" style="width: 7rem;">
                                         <div class="card-body">
                                             <section id="primero">
                                                 <a href="#">
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <div>
+                                                        <p><small> Nombre del plato</small></p>
+                                                    </div>
+
                                                 </a>
 
                                             </section>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
-
 
                     </div>
                 </div>
