--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -19,3 +19,8 @@
     font-family: 'Satisfy', cursive;
     color: #FFBF00;
 }
+
+.font-botones {
+    font-family: 'Patrick Hand', cursive;
+    font-size: 30px;
+}
