--- a/src/app/components/modals/user-modal/user-modal.component.html
+++ b/src/app/components/modals/user-modal/user-modal.component.html
@@ -13,29 +13,46 @@
         <form class="form-book" [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
           <div class="form-row">
             <div class="form-group col-md-12">
-              <label for="autor">Nombre</label>
+              <label for="nombres">Nombre</label>
               <input type="text" name="autor" class="form-control" placeholder="Nombres" formControlName="nombres">
             </div>
             <div class="form-group col-md-12">
-              <label for="autor">Apellidos</label>
+              <label for="apellidos">Apellidos</label>
               <input type="text" name="autor" class="form-control" placeholder="Apellidos" formControlName="apellidos">
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label for="portada">Nombre de usuario</label>
+              <label for="username">Nombre de usuario</label>
               <input type="text" name="portada" class="form-control" placeholder="Username" formControlName="userName">
             </div>
             <div class="form-group col-md-6">
-              <label for="link_amazon">email</label>
+              <label for="email">email</label>
               <input type="email" name="email" class="form-control" placeholder="email@example.com"
                 formControlName="email">
             </div>
-            <div class="form-group col-md-12">
-
+            <div class="form-group col-md-6">
+                <label for="password">Password</label>
+                <input type="password" name="password" class="form-control" placeholder="*****"
+                  formControlName="password">
             </div>
             <div class="form-group col-md-6">
-                <label for="oferta">Genero</label>
+                <label for="link_amazon">Imagen</label>
+                <input type="text" name="imagen" class="form-control" placeholder="imagen.jpg"
+                  formControlName="imagen">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="rol">Rol</label>
+                <select name="rol" class="form-control">
+                  <option value="1">Administrador</option>
+                  <option value="0">Propietario</option>
+                  <option value="0">Cliente</option>
+                </select>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="genero">Genero</label>
                 <select name="oferta" class="form-control">
                   <option value="1">Femenino</option>
                   <option value="0">Masculino</option>
