--- a/src/app/components/modals/user-modal/user-modal.component.html
+++ b/src/app/components/modals/user-modal/user-modal.component.html
@@ -59,6 +59,19 @@
                 </select>
             </div>
           </div>
+
+          <div class="form-row">
+            <div class="col-md-6">
+              <label for="portada">Subir imagen</label>
+              <input type="file" name="portada" class="form-control" placeholder="Portada" accept=".png, .jpg, .jpeg" formControlName="imagen"
+                #fileInput (change)="fileProgress($event)">
+            </div>
+            <div class="col-md-6">
+              <div class="d-flex justify-content-center">
+                <img *ngIf="imageUrl" [src]="imageUrl" alt="" height="80" width="100">
+              </div>
+            </div>
+          </div>
           <!-- <div class="form-group">
             <label for="descripcion">Descripción</label>
             <textarea name="descripcion" class="form-control" cols="50" rows="4"></textarea>
