--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -8,8 +8,11 @@
                             <h4 class="card-title ">Tabla Usuarios</h4>
                             <p class="card-category"> Informacion Usuarios</p>
                         </div>
+<!--
                         <button class="ordena btn btn-success float-right mb-3" type="button" data-toggle="modal"
                             data-target="#modalUser">Nuevo</button>
+                             -->
+                        <a routerLink="/admin/user-createform" routerLinkActive="router-link-active"  class="ordena btn btn-success float-right mb-3">Nuevo</a>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -80,4 +83,4 @@
         </div>
     </div>
 </div>
-<app-user-modal (messageToEmit)="getMessage($event)"></app-user-modal>
+<!-- <app-user-modal (messageToEmit)="getMessage($event)"></app-user-modal> -->
