--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -8,11 +8,12 @@
                             <h4 class="card-title ">Tabla Usuarios</h4>
                             <p class="card-category"> Informacion Usuarios</p>
                         </div>
-<!--
+                        <!--
                         <button class="ordena btn btn-success float-right mb-3" type="button" data-toggle="modal"
                             data-target="#modalUser">Nuevo</button>
                              -->
-                        <a routerLink="/admin/user-createform" routerLinkActive="router-link-active"  class="ordena btn btn-success float-right mb-3">Nuevo</a>
+                        <a routerLink="/admin/create-user" routerLinkActive="router-link-active"
+                            class="ordena btn btn-success float-right mb-3">Nuevo</a>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -70,8 +71,12 @@
                                         </th>
                                         <td>
                                             <!-- <a href="#" class="btn btn-info"><span><i class="fa fa-plus"></i></span></a> -->
-                                            <a href="#" class="btn btn-info"><span><i class="fa fa-pen"></i></span></a>
-                                            <button routerLinkActive="router-link-active" class="btn btn-danger" (click)="onDeleteUser(user.id)"><span><i class="fa fa-trash"></i></span></button>
+                                            <button type="button" class="btn btn-info"
+                                                routerLink="/admin/edit-user/{{user.id}}"><span><i
+                                                        class="fa fa-pen"></i></span></button>
+                                            <button type="button" routerLinkActive="router-link-active"
+                                                class="btn btn-danger" (click)="onDeleteUser(user.id)"><span><i
+                                                        class="fa fa-trash"></i></span></button>
                                         </td>
                                     </tr>
                                 </tbody>
